fixed overlap

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@ body {
   
   background-color: #00DBDE;
   background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
-
+  padding-top: 1%;
   height: 100%;
   min-height: 100vh;
   width: 100%;
@@ -90,7 +90,7 @@ ul {
   text-align: center;
 }
 .movie-list {
-    margin-top: 20px;
+    margin-top: 70px;
 }
 #login-button {
   margin-right: 20px;
